<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".EditNotesActivity">
    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/editBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_body"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/btnEditNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:text="@string/edit_note"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        android:text="@string/delete_note"
        android:layout_marginTop="20dp"/>

</LinearLayout>