<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity"
    android:orientation="vertical"
    android:padding="15dp">

    <EditText
        android:id="@+id/addTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/addBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_body"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:text="@string/add_note"
        android:layout_marginTop="20dp"/>

</LinearLayout>